# GetServed

./: .gitignore  Dockerfile  README.md  pyproject.toml
getserved/: __init__.py  app.py
